[tool.poetry]
name = "evo-sim"
version = "0.1.0"
description = ""
authors = ["Michael Variola <michael.variola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
